--- a/moto-inventory-service.properties
+++ b/moto-inventory-service.properties
@@ -1,1 +1,10 @@
+# this is the port on which our moto-inventory-service will run
+server.port=4444
 
+# allow for RefreshScope
+management.endpoints.web.exposure.include=*
+
+
+vinLookupServiceName=vin-lookup-service
+serviceProtocol=http://
+servicePath=/vehicle/{vin}
