--- a/moto-inventory-service.properties
+++ b/moto-inventory-service.properties
@@ -2,3 +2,7 @@ server.port=4444
 
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
+
+vinLookupServiceName=vin-lookup-service
+serviceProtocol=http://
+servicePath=/vehicle/{vin}
