--- a/moto-inventory-service.properties
+++ b/moto-inventory-service.properties
@@ -1,8 +1,9 @@
-server.port=2121
+
+server.port=7979
 
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
-vinLookupServiceName=vin-lookup-service
-serviceProtocol=http://
-servicePath=/vehicle/{vin}
+#vinLookupServiceName=vin-lookup-service
+#serviceProtocol=http://
+#servicePath=/vehicle/{vin}
