--- a/moto-inventory-service.properties
+++ b/moto-inventory-service.properties
@@ -4,6 +4,18 @@ server.port=7979
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
+
+spring.datasource.url: jdbc:mysql://localhost:3306/moto_inventory?useSSL=false
+spring.datasource.username: root
+spring.datasource.password: rootroot
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
+# Uncomment this if you want the schema.sql script to run
+# against your MySQL Schema
+ spring.datasource.initialization-mode=always
+
+
+
 vinLookupServiceName=vin-lookup-service
 serviceProtocol=http://
 servicePath=/vehicle/{vin}
